--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "cors-anywhere": "^0.4.4",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "firebase": "^9.8.4",
     "nodemailer": "^6.7.5",
